[package]
name = "discord-markdown"
version = "0.1.2"
authors = ["aravk <aravkasi@gmail.com>"]
edition = "2018"
description = "Parse discord-flavored markdown"
repository = "https://github.com/cubetastic33/discord-markdown"
license = "GPL-3.0-only"
keywords = ["discord", "markdown", "parser"]
categories = ["parser-implementations"]

[dependencies]
nom = "7.1.3"
lazy_static = "1.4.0"
html-escape = "0.2.9"
nom-regex = "0.2.0"
